Soften brush can't handle seams in texture paint #33037

Closed
opened 2012-11-01 00:41:30 +01:00 by Tobias Oelgarte · 5 comments

%%%If i have some model, define seams, unwarp it and assign a texture to it. If i now have drawn something and have different colors along the seam then i can't use the smooth brush to smooth the over seam. It creates wrong results which enhances the visibility of them seam instead of smoothing over it. All other brushes (including smudge) have not this problem, but just for this case it would be very useful to have a functional smooth brush.

I appended an example file. Just try to smooth the seam between the white and red area. You will see that it uses the black pixels of the texture which are outside of the uv map, bleeding in. The effect gets stronger if the brush size, relative to the area you paint on, is increased.%%%

%%%If i have some model, define seams, unwarp it and assign a texture to it. If i now have drawn something and have different colors along the seam then i can't use the smooth brush to smooth the over seam. It creates wrong results which enhances the visibility of them seam instead of smoothing over it. All other brushes (including smudge) have not this problem, but just for this case it would be very useful to have a functional smooth brush. I appended an example file. Just try to smooth the seam between the white and red area. You will see that it uses the black pixels of the texture which are outside of the uv map, bleeding in. The effect gets stronger if the brush size, relative to the area you paint on, is increased.%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Let's see if Antony has a solution :)%%%

%%%Let's see if Antony has a solution :)%%%

%%%Yes, for this kind of brushes we still do not support projection-style strokes. I'll try to think of a way to do this right.%%%

%%%Yes, for this kind of brushes we still do not support projection-style strokes. I'll try to think of a way to do this right.%%%

%%%This was something I didn't get around to when adding project paint.

committed support for soften brush r51934.%%%

%%%This was something I didn't get around to when adding project paint. committed support for soften brush r51934.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33037
No description provided.