fix [#33037] Soften brush can't handle seams in texture paint

project paint never worked with soften (blur), support now added.